--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -18,6 +18,7 @@
     "live-server": "^1.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-modal": "^3.11.1",
     "validator": "^12.2.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
