--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -15,10 +15,15 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "live-server": "^1.2.1",
+    "node-sass": "^4.13.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "validator": "^12.2.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
