--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -12,6 +12,7 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
@@ -26,6 +27,7 @@
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "uuid": "^3.4.0",
     "validator": "^12.2.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
