--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
@@ -17,6 +18,7 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "jest": "^25.1.0",
     "live-server": "^1.2.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
