--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "webpack",
     "dev-server": "webpack-dev-server",
-    "test": "jest"
+    "test": "jest --config=jest.config.json"
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
@@ -18,17 +18,22 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
     "jest": "^25.1.0",
     "live-server": "^1.2.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
+    "raf": "^3.4.1",
     "react": "^16.12.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
