In the process of passing 'Deploying Your Apps'

--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -5,7 +5,9 @@
   "author": "Vladimir Livinskiy",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
+    "serve": "live-server public/",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
@@ -23,6 +25,7 @@
     "enzyme-to-json": "^3.4.4",
     "jest": "^25.1.0",
     "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
