--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -9,7 +9,8 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "start": "node server/server.js"
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
@@ -23,6 +24,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
+    "express": "^4.17.1",
     "jest": "^25.1.0",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
