--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -5,7 +5,6 @@
   "author": "Vladimir Livinskiy",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -22,12 +21,7 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.4",
     "express": "^4.17.1",
-    "jest": "^25.1.0",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
@@ -39,14 +33,20 @@
     "react-modal": "^3.11.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "uuid": "^3.4.0",
     "validator": "^12.2.0",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.11"
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
+    "jest": "^25.1.0",
+    "react-test-renderer": "^16.12.0",
     "webpack-dev-server": "^3.10.3"
   }
 }
